Error Mitigation/MagiCoder/Data/java_nio_channels_spi/java_nio_channels_spiOutputResult.txt
Sample: AbstractInterruptibleChannel_1
----------------------------------------------------------------
output:
./Data/java_nio_channels_spi/javaFiles/AbstractInterruptibleChannel_1.java:11: error: cannot find symbol
            AbstractInterruptibleChannel channel = provider.openChannel(null);
                                                           ^
  symbol:   method openChannel(<null>)
  location: variable provider of type SelectorProvider
1 error


================================================================

Sample: AbstractInterruptibleChannel_2
----------------------------------------------------------------
stderr:
Exception in thread "main" java.lang.NullPointerException: Cannot invoke "java.nio.channels.spi.AbstractInterruptibleChannel.close()" because "<local1>" is null
	at AbstractInterruptibleChannel_2.main(AbstractInterruptibleChannel_2.java:8)

================================================================

